2007-02-28  David Smith  <dsmith@redhat.com>

	* systemtap.spec.in: Fixed %{_libexecdir}/systemtap path in
	systemtap-runtime %files section.

2007-02-27  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.spec.in (/var/cache/systemtap): Forget it.
	(stp_check): Pack this in with systemtap-runtime.
	* stp_check.in: Add LANG=C for speed.

2007-02-27  David Smith  <dsmith@redhat.com>

	* staprun.8.in: Added a basic staprun man page.
	* Makefile.am: Added staprun.8.
	* Makefile.in: Regenerated.
	* configure.ac: Added staprun.8.
	* configure: Regenerated.
	* systemtap.spec.in: Added staprun.8 and other document files to
	staprun RPM.
	* .cvsignore: Ignores staprun.8.

2007-02-27  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (dwflpp setup): Print "missing kernel debuginfo"
	message consistently for, er, missing kernel debuginfo.
	(dwarf_builder::build): Don't try to help.
	(query_kernel_exists): Zapped.

2007-02-27  David Smith  <dsmith@redhat.com>

	* systemtap.spec.in: Fedora Packaging Guidelines updates.  Updated
	BuildRoot macro value to Fedora Extras standard value.  No longer
	uses %makeinstall macro.  The rpm now owns the
	/usr/libexec/systemtap directory.

2007-02-26  David Smith  <dsmith@redhat.com>

	* Makefile.am: Removed 'update-examples' target.  Moved
	functionality to systemtap.spec.in.
	* Makefile.in: Regenerated from Makefile.am.
	* systemtap.spec.in: Fixes paths in the example scripts directly.
	
	* Makefile.am: Added 'update-examples' target that fixes paths in
	the example code we ship in the rpm.
	* Makefile.in: Regenerated from Makefile.am.
	* systemtap.spec.in: Calls "make update-examples" target to fix
	the path to systemtap in the example scripts.

2007-02-25  Frank Ch. Eigler  <fche@redhat.com>

	* elaborate.h (match_node, derived_probe_builder): Add
	build_no_more member function.
	* elaborate.cxx (semantic_pass_symbols): Call it.
	* tapsets.cxx (dwarf_builder): Implement it by releasing dwflpp